test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/subscript_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  void
  *
  identifier(v)
  =
  &
  identifier(x)
  ;
  identifier(v)
  [
  const int(0)
  ]
  ;
  return
  const int(0)
  ;
  }
